...
    IconButton(
        onClick = onClick,
        modifier = modifier.testTag(CompactBackActionTestTag),
    ) {
        Icon(
            painter = painterResource(R.drawable.ic_arrow_back_24),
            contentDescription = "Navigate back",
            tint = CalmTheme.colorTokens.onScreenBackground,
        )
    }
}

@Composable
...
    IconButton(
        onClick = onClick,
        modifier = modifier.testTag(CompactSettingsActionTestTag),
    ) {
        Icon(
            painter = painterResource(R.drawable.ic_settings_24),
            contentDescription = "Open settings",
            tint = CalmTheme.colorTokens.onScreenBackground,
        )
    }
}

private const val CompactBackActionTestTag = "compact_back_action"
...
